# telegram-ai-agent

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  _whisper_subprocess.py  advanced_intelligence.py  advanced_nlp.py  autonomy_engine.py  call_bridge.py  call_engine.py  context_engine.py  control_panel.py  conversation_engine.py  dl_models.py  docker-compose.yml  emotional_intelligence.py  language_learning_engine.py  main.py  media_ai.py  media_intelligence.py  media_response_brain.py  memory_engine.py  neural_networks.py  nlp_engine.py  orchestrator.py  personality_engine.py  prediction_engine.py  psychological_datasets.py  pyproject.toml  reasoning_engine.py  requirements.txt  rl_engine.py  run_dashboard.sh  startup_dashboard.py  style_engine.py  telegram_api.py  thinking_engine.py  (+3 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docker-build.yml
agent/: package.json
agent/src/: agent.ts  config.ts  index.ts
agent/src/data/: pickup-lines.ts
agent/src/tools/: aiify.ts  nia.ts  telegram.ts
autoresearch/: __init__.py  config.py  evaluate.py  harvest.py  optimize_engines.py  optimize_rl.py  prepare.py  program.md  run_experiment.py  train.py  train_sklearn.py  voice_experiment.py
dashboard/: __init__.py  dashboard.py  state.py
trained_models/: conversation_stage_meta.json  emotional_tone_meta.json  romantic_intent_meta.json
trained_models/neural/: conversation_stage_meta.json  emotional_tone_meta.json  romantic_intent_meta.json
training/: __init__.py  expanded_data.py  generate_expanded_data.py  real_conversations_data.py  train_classifiers.py  training_data.py
